# FXBrain

./: .env  README.md  index.html  main.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  trim_name.py  vite.config.js
api/: main.py
entities/: BacktestResult  EconomicEvent  NewsArticle  PaperPortfolio  PaperTrade  TradingSignal  UserAlert  UserDashboard
src/: App.jsx  Layout.jsx  pages.config.jsx
src/components/alerts/: AlertCard.jsx  CreateAlertModal.jsx
src/components/api/: appDataService.jsx
src/components/auth/: ProtectedRoute.jsx
src/components/backtest/: BacktestForm.jsx  BacktestResults.jsx
src/components/calendar/: EventRow.jsx
src/components/charts/: PriceChart.jsx  TradingViewChart.jsx
src/components/dashboard/: DashboardWidget.jsx  MarketTicker.jsx  StatsCard.jsx
src/components/dashboard/widgets/: AlertsWidget.jsx  CalendarWidget.jsx  ChartWidget.jsx  NewsWidget.jsx  SignalsWidget.jsx
src/components/news/: NewsCard.jsx
src/components/paper-trading/: OpenPositions.jsx  PortfolioStats.jsx  TradeForm.jsx
src/components/signals/: SignalCard.jsx
src/lib/: AuthContext.jsx  NavigationTracker.jsx
src/pages/: Account.jsx  Alerts.jsx  Backtest.jsx  Calendar.jsx  Charts.jsx  Dashboard.jsx  Home.jsx  Login.jsx  News.jsx  PaperTrading.jsx  Signals.jsx
src/services/: apiService.js
src/theme/: colors.js
src/utils/: index.ts
test/: test.ipynb  usd_high_impact_events.json
