[project]
name = "fxbrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.1.8",
    "g4f[all]",
    "ipykernel>=6.30.1",
    "openai>=2.6.1",
    "pytz==2025.1",
    "requests==2.32.3",
    "schedule==1.2.2",
    "selenium>=4.36.0",
    "tzlocal==5.3.1",
]
